Anita no longer passes the "-no-acpi" option to qemu by default,
because the ACPI case now works with -current, and disabling
ACPI triggers other bugs.  See PR port-i386/42681 for more details.

- 1.9 released -

Deal with recent renumbering of password encryption choices in sysinst.

- 1.8 released -

Increase timeouts, particularly when extracting sets and running the
ATF tests

Document the "test" command and path-in-place-of-URL

- 1.7 released -

Remove workaround for lib/39175, which broke the installation
of the "comp" set

Add "test" command for running the ATF tests

Accept a local distribution directory path in place of a URL

Check for missing slash at end of distribution directory URL

Detect HTTP 404 errors

- 1.6 released -