@@ -1,3 +1,5 @@
+New command line option "--qemu-args".
+
 Anita no longer passes the "-no-acpi" option to qemu by default,
 because the ACPI case now works with -current, and disabling
 ACPI triggers other bugs.  See PR port-i386/42681 for more details.
